@@ -9,7 +9,8 @@ importFrom("sandwich", "estfun", "bread")
 importFrom("stats", "simulate", "variable.names", "model.matrix", "logLik",
            "vcov", "AIC", "coef", "confint", "dlogis", "dnorm",
            "lm.fit", "plogis", "pnorm", "predict", "qlogis", "qnorm",
-           "runif", "stepfun", "weights", "approxfun", "xtabs", "resid")
+           "runif", "stepfun", "weights", "approxfun", "xtabs", "resid",
+           "complete.cases")
 
 # importFrom("quadprog", "solve.QP")
 importFrom("coneproj", "qprog")
