@@ -14,7 +14,7 @@ Description: Formula-based user-interfaces to specific transformation models
   (Lohse et al., 2017, <DOI:10.12688/f1000research.12934.1>). The underlying theory
   is described in Hothorn et al. (2018) <DOI:10.1111/sjos.12291>. An extension to
   transformation models for clustered data is provided (Hothorn, 2019, <arxiv:1910.09219>).
-Depends: mlt (>= 1.1-1)
+Depends: mlt (>= 1.1-2)
 Imports: Formula, multcomp, variables (>= 1.0-2), basefun (>= 1.0-5), 
   sandwich, stats, survival, graphics, Matrix, methods
 Suggests: MASS, TH.data, trtf (>= 0.3-3), mlbench, knitr, quantreg, 
